--- a/Stack_and_Queues.ipynb
+++ b/Stack_and_Queues.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7yw3BFx/E/lYBNhlvmVuM",
+      "authorship_tag": "ABX9TyMPn6QYUpVnH3eYiS/O+zV1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YWrkDNWbZCqx",
-        "outputId": "c00c2386-f848-46f6-90f5-274801056705"
+        "outputId": "56ce7448-999c-4e37-a945-63ee32af7379"
       },
       "outputs": [
         {
@@ -42,36 +42,92 @@
           "name": "stdout",
           "text": [
             "['A', 'B', 'C']\n",
+            "['A', 'B']\n",
             "['A']\n"
           ]
         }
       ],
       "source": [
-        "class Stack:\n",
+        "class Stack:                  #Stack-_Last-in-First-out (LIFO)\n",
         "  def __init__(self):\n",
         "    self.stack = []                       #stack implementation using OOP concepts\n",
         "\n",
-        "  def push(self,dataval):\n",
+        "  def add(self,dataval):\n",
         "    if dataval not in self.stack:\n",
         "      return self.stack.append(dataval)\n",
         "    else:\n",
         "      return False\n",
-        "  def pop(self):\n",
+        "  def remove(self):\n",
         "    if len(self.stack)<=0:\n",
         "      return(\"No element in the stack\")\n",
         "    else:\n",
         "      return self.stack.pop()\n",
         "\n",
         "AStack = Stack()\n",
-        "AStack.push(\"A\")\n",
-        "AStack.push(\"B\")\n",
-        "AStack.push(\"C\")\n",
+        "AStack.add(\"A\")\n",
+        "AStack.add(\"B\")\n",
+        "AStack.add(\"C\")\n",
         "print(AStack.stack)\n",
-        "AStack.pop()\n",
-        "AStack.pop()\n",
+        "AStack.remove()\n",
+        "print(AStack.stack)\n",
+        "AStack.remove()\n",
         "print(AStack.stack)\n",
         "\n",
         "  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Application 1\n",
+        "\n",
+        "#Implement the above program by Queues Data Structure (enqueue and dequeue/FIFO principle)\n",
+        "class Queues:\n",
+        "  def __init__(self):\n",
+        "    self.queues = []                      \n",
+        "  def add(self,dataval):\n",
+        "    if dataval not in self.queues:\n",
+        "      return self.queues.append(dataval)\n",
+        "    else:\n",
+        "      return False\n",
+        "  def remove(self):\n",
+        "    if len(self.queues)<=0:\n",
+        "      return(\"No element in the stack\")\n",
+        "    else:\n",
+        "      return self.queues.pop(0)\n",
+        "\n",
+        "AQueues = Queues()\n",
+        "AQueues.add(\"A\")\n",
+        "AQueues.add(\"B\")\n",
+        "AQueues.add(\"C\")\n",
+        "AQueues.add(\"D\")\n",
+        "print(AQueues.queues)\n",
+        "AQueues.remove()\n",
+        "print(AQueues.queues)\n",
+        "AQueues.remove()\n",
+        "print(AQueues.queues)\n",
+        "AQueues.remove()\n",
+        "print(AQueues.queues)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sGInNJCKiJ2K",
+        "outputId": "756a0710-c242-47c7-933c-7eeb10ed315e"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['A', 'B', 'C', 'D']\n",
+            "['B', 'C', 'D']\n",
+            "['C', 'D']\n",
+            "['D']\n"
+          ]
+        }
       ]
     }
   ]
